plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = "${project.minecraft_version}-b${project.build_number}"
group = project.maven_group

base {
	archivesName = project.release_name
}

repositories {
	maven { url 'https://maven.wispforest.io' }
	maven { url 'https://jitpack.io' }
	mavenCentral()
}

configurations.configureEach {
	resolutionStrategy.eachDependency { details ->
	if (details.requested.group == 'io.netty' && details.requested.name == 'netty-codec-http') {
			details.useVersion('4.2.10.Final')
			details.because('CVE-2026-33870')
		}
		if (details.requested.group == 'org.apache.logging.log4j' && details.requested.name == 'log4j-core') {
			details.useVersion('2.25.4')
			details.because('CVE-2026-34478, CVE-2026-34480, CVE-2026-34477')
		}
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"

	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
	implementation "io.wispforest:owo-lib:${project.owo_version}"
	annotationProcessor "io.wispforest:owo-lib:${project.owo_version}"

	testImplementation "org.junit.jupiter:junit-jupiter:5.11.4"
	testRuntimeOnly "org.junit.platform:junit-platform-launcher:1.11.4"
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

tasks.withType(Test).configureEach {
	useJUnitPlatform()
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	repositories {
	}
}
